# asyncftp/console/app.py
@@ -14,29 +14,31 @@ net = net_io_counters()
 def make_app(server):
     app = Flask(__name__)
 
-    @app.route('/api/speed', methods=['GET'])
+    @app.route('/api/info', methods=['GET'])
     def speed():
         if request.method == 'GET':
             global t
             global net
             temp_t = time.time()
             p = net_io_counters()
-            result = dict(
+            result = dict()
+            result['speed'] = dict(
                 up=(p[0] - net[0]) / (temp_t - t),
                 down=(p[1] - net[1]) / (temp_t - t)
             )
+            result['up_time'] = server.up_time
             t = temp_t
             net = p
             return jsonify(result)
 
-    @app.route('/api/run', methods=['GET'])
+    @app.route('/api/start', methods=['GET'])
     def run_server():
         if not server.running:
             thread = threading.Thread(target=server.run)
             thread.start()
         return 'ok'
 
-    @app.route('/api/close', methods=['GET'])
+    @app.route('/api/stop', methods=['GET'])
     def close_server():
         server.close()
         return 'ok'
@@ -48,7 +50,6 @@ def make_app(server):
                 'host': server.host,
                 'port': str(server.port),
                 'version': __version__,
-                'uptime': server.up_time,
                 'refuse_ip': server.ip_refuse
             })
 
